started question search

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <script src="https://use.fontawesome.com/48e3852605.js"></script>
   </head>
   <body>
-    <app-root></app-root>
+    <sb-root></sb-root>
   </body>
 </html>
